--- a/assets/main.css
+++ b/assets/main.css
@@ -36,6 +36,10 @@
      margin: 60px auto;
      width: 1000px;
  }
+
+ ol{
+    margin-left: 100px; /* or padding-left: 20px; */
+}
  
  a{color: #b8860b; text-decoration:none;}
  a.current{color: #52739e;}
@@ -47,7 +51,7 @@
  h2{font-size:2.00em;}
  h3{font-size:1.67em;}
  h4{font-size:1.33em;}
- p{list-style:none; margin:24px auto 24px auto; padding:0px; width:900px; text-align:left;}
+ p{list-style:none ; margin:24px auto 24px auto; padding:0px; width:900px; text-align:left;}
  li a, p a {text-decoration:underline; text-decoration-color:#b8860b;}
  ul{margin:24px auto 24px auto; padding:0px; width:800px; text-align:left;}
  ul li{margin:0px auto 0px auto; padding:0px; text-align:left;}
@@ -81,13 +85,13 @@
  
  /* Website Banner */
  .banner {position: relative; font-family:'Roboto Slab',serif;}
- .top-left {color: #fafafa; line-height: 1.5em; text-align: left; width: auto; height: 100px; position: absolute; padding: 0px 0px 27px 36px; top: 27px;}
+ .top-left {color: #fafafa; line-height: 1.7em; text-align: left; width: auto; height: 100px; position: absolute; padding: 0px 0px 27px 36px; top: 15px;}
  .top-left br {content: ""; margin: 1.5em; display: block;font-size: 100%;}
- .bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
+ .bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.3em; width: auto; height: 100px; padding: 0px 27px 15px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
  
  /* Conference Title Logo */
  .title1{font-size: 2.167em; color: #fafafa;} 
- .title2{font-size: 4.33em; color: #b2132e; text-shadow: 0px 0px 4px #fafafa;}
+ .title2{font-size: 4em; color: #b2132e; text-shadow: 0px 0px 4px #fafafa;}
  .year{font-size: 4.33em; color: #fafafa;}
  
  /* Navigation Links (Home, Registration, etc) */
